--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ button{
     gap: 10px;
 }
 .main__nav-button{
-    padding: 3px 5px;
+    padding: 5px 7px;
     background-color: rgb(51, 116, 255);
     border: none;
     border-radius: 5px;
@@ -71,7 +71,7 @@ button{
 }
 .main__nav-input{
     width: 50vw;
-    padding: 5px;
+    padding: 10px 20px;
     font-size: 20px;
     flex: 1;
     border-radius: 10px;
@@ -89,7 +89,7 @@ button{
     outline: none;
 }
 .main__nav-button-order{
-    padding: 9px;
+    padding: 12px;
     border: none;
     background-color: inherit;
     color: #fff;
@@ -112,7 +112,7 @@ button{
 
 .main__nav__order__menu{
     display: none;
-    width: 114px;
+    width: 120px;
     min-width: 100px;
     height: 70px;
     position: absolute;
@@ -162,6 +162,8 @@ button{
     display: flex;
     flex-direction: column;
     position: relative;
+    z-index: 2;
+    overflow: visible;
 }
 
 .main__notes-container-note{
@@ -172,10 +174,11 @@ button{
     justify-content: space-around;
     border-radius: 20px;
     padding: 0 15px;
+    position: relative;
     box-shadow: 2px 4px 2px 0px #8c97c0;
     border: none;
     transition: .4s;
-    z-index: 1;
+    z-index: 3 !important;
 }
 
 .main__notes-container-note:hover{
@@ -261,35 +264,46 @@ button{
     color: #3374ff;
 }
 .main__note-actions{
+    width: 90px;
+    height: 55px;
     display: none;
-    right: 0px;
     position: absolute;
-    background-color: #edeff7;
     border-radius: 2px;
-    overflow: hidden;
-    z-index: 2;
+    right: -70px;
+    transition: right 1s;
+}
+.actions__container-btns{
+    display: flex;
+    height: 25px;
+    max-width: 0;
+    background: #edeff7;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding-left: 0px;
+    transform: scaleX(0);
     opacity: 0;
-    transition: right 1s, opacity 2s;
+    transform-origin: left;
+    transition: 
+        max-width .7s ease, 
+        padding-left .7s ease, 
+        transform 0.4s ease-in-out, 
+        opacity 0.4s ease-in-out;
+    z-index: 1;
+}
+.actions__container-btns:nth-child(2){
+    transition-delay: 0.1s;
 }
 .main__note__actions__button{
-    user-select: none;
-    white-space: nowrap/**********************************/;
-    /*width: 100%;
-    padding: 2px 5px;*/
     background-color: transparent;
     border: none;
-    width: fit-content;
-    max-width: 200px;
 }
 .main__note__actions__button:hover{
-    background-color: #3374ff;
-    color: #fff;
+    color: #3374ff;
 }
 .menu{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-
+    
 }
 
 /* ---- Formulario de Nueva Nota ----*/
