--- a/css/styles.css
+++ b/css/styles.css
@@ -478,6 +478,7 @@ button{
 
     .main__note-checkbox {
         transform: scale(2);
+        margin: 0 15px 0 15px;
     }
 
     .main__note-text {
@@ -487,7 +488,7 @@ button{
 
     .main__note-button {
         align-self: flex-end;
-        margin: 0;
+        margin: 0 10px 0 0;
     }
 
     .main__note-description {
@@ -497,7 +498,7 @@ button{
     .form-nueva-nota {
         height: auto;
         position: absolute;
-        top: -56px;
+        top: -60px;
         padding: 20px;
         gap: 20px;
         z-index: 7;
