--- a/css/styles.css
+++ b/css/styles.css
@@ -318,6 +318,7 @@ button{
 .menu{
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 /* ---- Formulario de Nueva Nota ----*/
@@ -425,6 +426,7 @@ button{
     margin: 0 13px 0 7px;
 }
 .note-edit-title{
+    width: 0;
     flex: 1;
     border: none;
     padding: 5px 0px 5px 10px;
