--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,15 @@ button{
     justify-content: center;
     align-items: center;
 }
+.btnAddNote{
+    padding: 5px 7px;
+    background-color: rgb(51, 116, 255);
+    border: none;
+    border-radius: 5px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
 .main__nav-button-icon{
     font-size: 30px;
     color: #81e97e;
@@ -415,6 +424,22 @@ button{
     color: #fff;
 }
 
+.btnEliminarCarpeta{
+    border: none;
+    outline: none;
+    background: #000000;
+    border-radius: 100%;
+    color: #ffffff;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btnEliminarCarpeta-icon{
+    font-size: 20px;
+    padding: 0;
+    margin: 0;
+}
 
 /* ---- Formulario de Nueva Nota ----*/
 .form-nueva-nota{
