--- a/css/styles.css
+++ b/css/styles.css
@@ -465,7 +465,8 @@ button{
     font-size: 2rem;
     font-family: sans-serif;
     font-weight: 300;
-    padding: 0 40px;
+    width: 50%;
+    text-align: center;
     margin: 10px 0 0 0;
     letter-spacing: .1rem;
     padding-bottom: 2px;
