--- a/css/styles.css
+++ b/css/styles.css
@@ -412,7 +412,7 @@ button{
     text-transform: uppercase;
 }
 .fa-folder{
-    color: #08235d;
+    color: #0d41b1;
     font-size: 25px;
 }
 .folder:hover .fa-folder{
