--- a/css/styles.css
+++ b/css/styles.css
@@ -485,6 +485,15 @@ button{
     z-index: 5;
     animation: fadeIn 0.5s ease forwards;
 }
+.form-editar-nota{
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    z-index: 2;
+    overflow: visible;
+    margin: 5px 0;
+}
 .headerText{
     width: auto;
     color: #fff;
